# REDonFDTD

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  DataAnalysis.cpp  Makefile  README.md  macroSetUp.hpp  memAllocation.hpp  meshInit.hpp  ricker.cpp  source.cpp  update3d.cpp
.github/workflows/: code_checks.yaml
REDonFDTDGUI/: .gitattributes  REDonFDTDGUI.pro  fdtdcalc.cpp  fdtdcalc.h  guiconfig.cpp  guiconfig.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionwindow.cpp  optionwindow.h  optionwindow.ui
docs/doxygen/: Doxyfile.in  mainpage.dox
include/REDonFDTD/: ABC.hpp  EMfunctions.hpp  config.hpp  macroSetUp.hpp  memAllocation.hpp  mesh.hpp  meshInit.hpp  output.hpp  particle.hpp  particleInit.hpp  prototypes.hpp  ricker.hpp  source.hpp  utilities.hpp
include/gnuplot/: gnuplot.hpp
src/: ABC.cpp  ABCsetup.cpp  CMakeLists.txt  DataAnalysis.cpp  EMFunctions.cpp  main.cpp  mesh.cpp  meshInit.cpp  output.cpp  particle.cpp  ricker.cpp  slice.cpp  source.cpp  update3d.cpp  utilities.cpp
t/: ExXY10Test.txt  ExXY25Test.txt  dimExpected.txt  regression.sh
